--- a/webpaser/res/layout/activity_news.xml
+++ b/webpaser/res/layout/activity_news.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent" >
 
         <RelativeLayout
+            android:id="@+id/root"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
@@ -18,9 +19,10 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="15sp"
                 android:gravity="center"
                 android:text="Large Text"
+                
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
@@ -29,8 +31,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/textView_title"
-                android:layout_marginLeft="20sp"
-                android:layout_marginTop="5sp"
+                android:layout_toLeftOf="@+id/textView_time"
+                android:layout_marginLeft="25sp"
+                android:layout_marginTop="25sp"
+                android:layout_marginBottom="25sp"
                 android:text="Small Text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/gray" />
@@ -41,8 +45,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/textView_title"
-                android:layout_marginRight="20sp"
-                android:layout_marginTop="5sp"
+                android:layout_marginRight="25sp"
+                android:layout_marginTop="25sp"
+                
                 android:text="Small Text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/gray" />
@@ -53,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView_name"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25sp"
+                android:layout_marginTop="5sp"
                 android:layout_marginBottom="25sp"
                 android:src="@drawable/ic_launcher" />
 
@@ -65,9 +70,19 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/imageView1"
                 android:layout_margin="5sp"
+                android:layout_marginTop="20sp"
                 android:padding="3sp"
                 android:text="Small Text"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <WebView
+                android:id="@+id/webView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/textView_text"
+                android:layout_below="@+id/textView_text" 
+                android:visibility="gone"/>
+
         </RelativeLayout>
     </ScrollView>
 
