--- a/webpaser/res/layout/item_mainlist.xml
+++ b/webpaser/res/layout/item_mainlist.xml
@@ -9,15 +9,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center_vertical"
         android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/textView_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageView1"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imageView1"
         android:layout_marginLeft="5dp"
         android:text="Large Text"
@@ -32,6 +33,7 @@
         android:layout_below="@+id/textView_title"
         android:text="Medium Text"
         android:textColor="@color/black"
+        
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
