--- a/webpaser/res/layout/activity_news.xml
+++ b/webpaser/res/layout/activity_news.xml
@@ -54,8 +54,8 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200sp"
+                android:layout_height="200sp"
                 android:layout_below="@+id/textView_name"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5sp"
