--- a/webpaser/res/layout/item_mainlist.xml
+++ b/webpaser/res/layout/item_mainlist.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75sp"
+        android:layout_height="75sp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="15dp"
