--- a/webpaser/res/layout/item_mainlist.xml
+++ b/webpaser/res/layout/item_mainlist.xml
@@ -22,7 +22,7 @@
         android:layout_toRightOf="@+id/imageView1"
         android:layout_marginLeft="5dp"
         android:text="Large Text"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -32,7 +32,7 @@
         android:layout_alignLeft="@+id/textView_title"
         android:layout_below="@+id/textView_title"
         android:text="Medium Text"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:visibility="gone"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -43,6 +43,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@+id/textView_description"
         android:layout_marginRight="18dp"
+        android:layout_marginTop="10sp"
         android:text="Small Text"
         android:textColor="@color/gray"
         android:textAppearance="?android:attr/textAppearanceSmall" />
