--- a/webpaser/res/layout/item_widget.xml
+++ b/webpaser/res/layout/item_widget.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
->
+    android:background="@color/white" >
 
     <ImageView
         android:id="@+id/imageView1"
@@ -20,11 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView1"
         android:layout_marginLeft="5dp"
+        android:layout_toRightOf="@+id/imageView1"
         android:text="Large Text"
-        android:textColor="@color/black"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView_description"
@@ -33,9 +34,9 @@
         android:layout_alignLeft="@+id/textView_title"
         android:layout_below="@+id/textView_title"
         android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/gray"
-        android:visibility="gone"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView3_time"
@@ -46,7 +47,7 @@
         android:layout_marginRight="18dp"
         android:layout_marginTop="10sp"
         android:text="Small Text"
-        android:textColor="@color/gray"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/gray" />
 
 </RelativeLayout>
