--- a/webpaser/res/xml/stackwidgetinfo.xml
+++ b/webpaser/res/xml/stackwidgetinfo.xml
@@ -18,9 +18,10 @@
   android:minWidth="310dip"
   android:minHeight="110dip"
   android:updatePeriodMillis="600"
-  android:previewImage="@drawable/preview"
+  android:previewImage="@drawable/ic_launcher"
   android:initialLayout="@layout/widget_layout"
   android:autoAdvanceViewId="@id/stack_view">
+  android:resizeMode="horizontal|vertical"
 </appwidget-provider>
 <!--to enable resizing:
  android:resizeMode="horizontal|vertical" -->
